...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            </imageView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Vai-Mc-3G5">
                                <rect key="frame" x="161.5" y="151" width="91" height="32"/>
                                <segments>
                                    <segment title="登入"/>
                                    <segment title="註冊"/>
                                </segments>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <connections>
                                    <action selector="signSelectorChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="DOm-FN-Ydx"/>
                                </connections>
...
                                <rect key="frame" x="107" y="807" width="200" height="43"/>
                                <color key="backgroundColor" red="0.12984609603881836" green="0.28938895463943481" blue="0.51375454664230347" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="l32-MG-oHH"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="swc-dy-uUA"/>
                                </constraints>
                                <state key="normal" title="確認">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="6"/>
                                    </userDefinedRuntimeAttribute>
...
                                <rect key="frame" x="91" y="695" width="232" height="43"/>
                                <color key="backgroundColor" red="0.12941176469999999" green="0.2901960784" blue="0.51372549020000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="UF7-U3-UBG"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="l1s-5f-29a"/>
                                </constraints>
                                <state key="normal" title="訂單確認">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="6"/>
                                    </userDefinedRuntimeAttribute>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="182" height="44"/>
                                                        <color key="backgroundColor" red="0.19652917981147766" green="0.20003655552864075" blue="0.20364347100257874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="44" id="FTJ-G4-Yhl"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="現在預訂">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                <integer key="value" value="6"/>
                                                            </userDefinedRuntimeAttribute>
...
                                <connections>
                                    <segue destination="efH-MC-bmn" kind="show" id="prJ-Sr-LiC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OT3-Tt-Zw9">
                                <rect key="frame" x="107" y="277" width="200" height="30"/>
                                <state key="normal" title="開始點餐"/>
                                <connections>
                                    <segue destination="UJ8-IY-dMM" kind="show" id="dLq-bO-5ku"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqs-ES-kY3">
                                <rect key="frame" x="107" y="353" width="200" height="30"/>
...
